# k_means_ffi_rust_dart

./: .gitignore
clustering_ffi_rust/: Cargo.toml  build.rs-t
clustering_ffi_rust/src/: api.rs  bridge_generated.rs  data.rs
clustering_flutter/: README.md  pubspec.yaml
clustering_flutter/android/: build.gradle  settings.gradle
clustering_flutter/example/: README.md  pubspec.yaml
clustering_flutter/example/lib/: main.dart
clustering_flutter/example/linux/: CMakeLists.txt  my_application.cc
clustering_flutter/example/windows/: CMakeLists.txt
clustering_flutter/lib/: bridge_generated.dart  clustering_flutter.dart
clustering_flutter/linux/: CMakeLists.txt
clustering_flutter/windows/: CMakeLists.txt
k_means_dart/: pubspec.yaml
k_means_dart/example/: k_means_dart_example.dart
k_means_dart/lib/: k_means_dart.dart
k_means_dart/test/: k_means_dart_test.dart
k_means_flutter/: README.md  pubspec.yaml
k_means_flutter/android/: gradle.properties
k_means_flutter/android/app/: build.gradle
k_means_flutter/lib/: bridge_generated.dart  ffi.dart  initial_locator.dart  main.dart  theme_random.dart
k_means_flutter/linux/: CMakeLists.txt  my_application.cc
k_means_flutter/test/: widget_test.dart
k_means_flutter/windows/: CMakeLists.txt
k_means_flutter/windows/runner/: Runner.rc  main.cpp
k_means_rust/: Cargo.toml  build.rs
k_means_rust/.cargo/: config.toml
k_means_rust/src/: api.rs  bridge_generated.rs  data.rs  lib.rs
k_means_test/: Cargo.toml
k_means_test/src/: main.rs
native_add/example/: pubspec.yaml
(+14 files in other folders)
