[package]
name = "clustering_ffi_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.41.1"
cogset = "0.2.0"


[build-dependencies]
flutter_rust_bridge_codegen = "1.41.1"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19.0", default-features = false }