[package]
name = "k_means_rust"
version = "0.1.0"
edition = "2021"


[lib]
name = "k_means_rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.41.1"
cogset = "0.2.0"

[build-dependencies]
flutter_rust_bridge_codegen = "1.41.1"
